--- a/pom.xml
+++ b/pom.xml
@@ -4,9 +4,9 @@
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
 
-    <groupId>d.studio</groupId>
+    <groupId>d.netstudio</groupId>
     <artifactId>MessageAPI</artifactId>
-    <version>1.0</version>
+    <version>1.1</version>
     <packaging>jar</packaging>
 
     <name>MessageAPI</name>
@@ -99,10 +99,6 @@
             <url>https://hub.spigotmc.org/nexus/content/repositories/snapshots/</url>
         </repository>
 
-        <repository>
-            <id>sonatype</id>
-            <url>https://oss.sonatype.org/content/groups/public/</url>
-        </repository>
             <repository>
                 <id>jitpack.io</id>
                 <url>https://jitpack.io</url>
@@ -128,10 +124,6 @@
             <version>${kotlin.version}</version>
             <scope>test</scope>
         </dependency>
-        <dependency>
-            <groupId>com.github.Danixd12</groupId>
-            <artifactId>MessageAPI</artifactId>
-            <version>1.0</version>
-        </dependency>
+
     </dependencies>
 </project>
