--- a/pom.xml
+++ b/pom.xml
@@ -4,9 +4,9 @@
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
 
-    <groupId>d.netstudio</groupId>
+    <groupId>d.studio</groupId>
     <artifactId>MessageAPI</artifactId>
-    <version>1.1</version>
+    <version>1.4</version>
     <packaging>jar</packaging>
 
     <name>MessageAPI</name>
