--- a/src/main/resources/plugin.yml
+++ b/src/main/resources/plugin.yml
@@ -1,3 +1,6 @@
 name: MessageAPI
 version: '${project.version}'
 main: d.studio.messageapi.MessageAPI
+commands:
+  hovertest:
+    description: "Test"
