--- a/pom.xml
+++ b/pom.xml
@@ -107,7 +107,10 @@
             <id>spigotmc-repo</id>
             <url>https://hub.spigotmc.org/nexus/content/repositories/snapshots/</url>
         </repository>
-
+        <repository>
+            <id>sonatype</id>
+            <url>https://oss.sonatype.org/content/groups/public/</url>
+        </repository>
             <repository>
                 <id>jitpack.io</id>
                 <url>https://jitpack.io</url>
